SLLS-184 Fix issues after migration to Java 17